--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,14 +9,12 @@ pipeline {
         }
         stage('Test') {
             steps {
-                sh './jenkins/scripts/test.sh'
+                sh 'test'
             }
         }
-        stage('Deliver') {
+        stage('deploy') {
             steps {
-                sh './jenkins/scripts/deliver.sh'
-                input message: 'Finished using the web site? (Click "Proceed" to continue)'
-                sh './jenkins/scripts/kill.sh'
+                sh 'deploy'
             }
         }
     }
