--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -9,12 +9,14 @@ pipeline {
         }
         stage('Test') {
             steps {
-                sh 'test'
+                sh './jenkins/scripts/test.sh'
             }
         }
-        stage('deploy') {
+        stage('Deliver') {
             steps {
-                sh 'deploy'
+                sh './jenkins/scripts/deliver.sh'
+                input message: 'Finished using the web site? (Click "Proceed" to continue)'
+                sh './jenkins/scripts/kill.sh'
             }
         }
     }
